# autotag

./: Makefile  README.md  pyproject.toml
autotag/: __init__.py  core.py
